@@ -35,7 +35,6 @@ import org.hyperledger.besu.cryptoservices.NodeKeyUtils;
 import org.hyperledger.besu.ethereum.p2p.config.RlpxConfiguration;
 import org.hyperledger.besu.ethereum.p2p.discovery.DiscoveryPeer;
 import org.hyperledger.besu.ethereum.p2p.peers.DefaultPeer;
-import org.hyperledger.besu.ethereum.p2p.peers.EnodeURLImpl;
 import org.hyperledger.besu.ethereum.p2p.peers.MutableLocalNode;
 import org.hyperledger.besu.ethereum.p2p.peers.Peer;
 import org.hyperledger.besu.ethereum.p2p.peers.PeerPrivileges;
@@ -52,7 +51,7 @@ import org.hyperledger.besu.ethereum.p2p.rlpx.wire.messages.PingMessage;
 import org.hyperledger.besu.metrics.noop.NoOpMetricsSystem;
 import org.hyperledger.besu.plugin.services.MetricsSystem;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
@@ -61,11 +60,11 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 import org.apache.tuweni.bytes.Bytes;
-import org.assertj.core.api.Assertions;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -79,13 +78,21 @@ public class RlpxAgentTest {
   private final PeerConnectionEvents peerConnectionEvents = new PeerConnectionEvents(metrics);
   private final MockConnectionInitializer connectionInitializer =
       new MockConnectionInitializer(peerConnectionEvents);
+  private List<PeerConnection> connections = Collections.emptyList();
+  private final Supplier<Stream<PeerConnection>> allConnectionsSupplier = this::streamConnections;
+  private final Supplier<Stream<PeerConnection>> allActiveConnectionsSupplier = Stream::empty;
   private RlpxAgent agent = agent();
 
   @Before
   public void setup() {
     // Set basic defaults
     when(peerPrivileges.canExceedConnectionLimits(any())).thenReturn(false);
-    config.setPeerUpperBound(5);
+    agent.subscribeConnectRequest((a, b) -> true);
+  }
+
+  @After
+  public void after() {
+    connections = Collections.emptyList();
   }
 
   @Test
@@ -116,7 +123,10 @@ public class RlpxAgentTest {
 
     // Stop after starting should succeed
     startAgent();
+
     final MockPeerConnection connection = (MockPeerConnection) agent.connect(createPeer()).get();
+    connections = List.of(connection);
+
     final CompletableFuture<Void> future2 = agent.stop();
     assertThat(future2).isDone();
     assertThat(future2).isNotCompletedExceptionally();
@@ -136,30 +146,33 @@ public class RlpxAgentTest {
   public void connect_succeeds() {
     startAgent();
     final Peer peer = createPeer();
+
     final CompletableFuture<PeerConnection> connection = agent.connect(peer);
 
     assertThat(connection).isDone();
     assertThat(connection).isNotCompletedExceptionally();
 
-    assertThat(agent.getPeerConnection(peer)).contains(connection);
+    assertThat(agent.getMapOfCompletableFutures().values()).contains(connection);
   }
 
   @Test
   public void connect_fails() {
     connectionInitializer.setAutocompleteConnections(false);
     startAgent();
+
     final Peer peer = createPeer();
     final CompletableFuture<PeerConnection> connection = agent.connect(peer);
 
     // Fail connection
-    connection.completeExceptionally(new RuntimeException("whoopsies"));
+    connection.completeExceptionally(new RuntimeException());
 
-    assertPeerConnectionNotTracked(peer);
+    agent.getMapOfCompletableFutures().get(peer.getId()).isCompletedExceptionally();
   }
 
   @Test
   public void connect_toDiscoveryPeerUpdatesStats() {
     startAgent();
+
     final DiscoveryPeer peer = DiscoveryPeer.fromEnode(enode());
     assertThat(peer.getLastAttemptedConnection()).isEqualTo(0);
     final CompletableFuture<PeerConnection> connection = agent.connect(peer);
@@ -170,16 +183,17 @@ public class RlpxAgentTest {
   }
 
   @Test
-  public void incomingConnect_succeeds() {
+  public void incomingConnect_causesDispatch() {
     startAgent();
+
+    final ConnectionDispatch connectionDispatch = new ConnectionDispatch();
+    agent.subscribeConnect(connectionDispatch::onConnect);
+
     final Peer peer = createPeer();
-    final PeerConnection connection = connection(peer);
+    final PeerConnection connection = connection(peer, true);
     connectionInitializer.simulateIncomingConnection(connection);
 
-    final Optional<CompletableFuture<PeerConnection>> trackedConnection =
-        agent.getPeerConnection(peer);
-    assertThat(trackedConnection).isNotEmpty();
-    assertThat(trackedConnection.get()).isCompletedWithValue(connection);
+    assertThat(connectionDispatch.getDispatchCount()).isEqualTo(1);
   }
 
   @Test
@@ -195,23 +209,24 @@ public class RlpxAgentTest {
         .hasCauseInstanceOf(IllegalStateException.class)
         .hasMessageContaining("Cannot connect before")
         .hasMessageContaining("has finished starting");
-    assertPeerConnectionNotTracked(peer);
   }
 
   @Test
   public void incomingConnect_failsIfAgentIsNotReady() {
     // Don't start agent or set localNode
+    final ConnectionDispatch connectionDispatch = new ConnectionDispatch();
+    agent.subscribeConnect(connectionDispatch::onConnect);
     final Peer peer = createPeer();
-    final PeerConnection connection = connection(peer);
+    final PeerConnection connection = connection(peer, true);
     connectionInitializer.simulateIncomingConnection(connection);
 
-    assertPeerConnectionNotTracked(peer);
-    assertThat(agent.getConnectionCount()).isEqualTo(0);
+    assertThat(connectionDispatch.getDispatchCount()).isEqualTo(0);
   }
 
   @Test
   public void connect_failsIfPeerIsNotListening() {
     startAgent();
+
     final Peer peer = DefaultPeer.fromEnodeURL(enodeBuilder().disableListening().build());
     final CompletableFuture<PeerConnection> connection = agent.connect(peer);
 
@@ -221,450 +236,23 @@ public class RlpxAgentTest {
     assertThatThrownBy(connection::get)
         .hasCauseInstanceOf(IllegalArgumentException.class)
         .hasMessageContaining("Attempt to connect to peer with no listening port");
-    assertPeerConnectionNotTracked(peer);
   }
 
   @Test
   public void connect_doesNotCreateDuplicateConnections() {
     startAgent();
+
     final Peer peer = createPeer();
     final CompletableFuture<PeerConnection> connection1 = agent.connect(peer);
     final CompletableFuture<PeerConnection> connection2 = agent.connect(peer);
 
-    assertThat(connection2).isDone();
-    assertThat(connection2).isNotCompletedExceptionally();
     assertThat(connection2).isEqualTo(connection1);
-
-    assertThat(agent.getPeerConnection(peer)).contains(connection2);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-  }
-
-  @Test
-  public void incomingConnection_deduplicatedWhenAlreadyConnected_peerWithHigherValueNodeId() {
-    final Bytes localNodeId = Bytes.fromHexString("0x01", EnodeURLImpl.NODE_ID_SIZE);
-    final Bytes remoteNodeId = Bytes.fromHexString("0x02", EnodeURLImpl.NODE_ID_SIZE);
-
-    startAgent(localNodeId);
-
-    final Peer peer = createPeer(remoteNodeId);
-    final CompletableFuture<PeerConnection> existingConnection = agent.connect(peer);
-    final MockPeerConnection incomingConnection = connection(peer);
-    connectionInitializer.simulateIncomingConnection(incomingConnection);
-
-    // Existing connection should be kept
-    assertThat(agent.getPeerConnection(peer)).contains(existingConnection);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertThat(incomingConnection.isDisconnected()).isTrue();
-    assertThat(incomingConnection.getDisconnectReason())
-        .contains(DisconnectReason.ALREADY_CONNECTED);
-  }
-
-  @Test
-  public void incomingConnection_deduplicatedWhenAlreadyConnected_peerWithLowerValueNodeId()
-      throws ExecutionException, InterruptedException {
-    final Bytes localNodeId = Bytes.fromHexString("0x02", EnodeURLImpl.NODE_ID_SIZE);
-    final Bytes remoteNodeId = Bytes.fromHexString("0x01", EnodeURLImpl.NODE_ID_SIZE);
-
-    startAgent(localNodeId);
-
-    final Peer peer = createPeer(remoteNodeId);
-    final CompletableFuture<PeerConnection> existingConnection = agent.connect(peer);
-    final PeerConnection incomingConnection = connection(peer);
-    connectionInitializer.simulateIncomingConnection(incomingConnection);
-
-    // New connection should be kept
-    Assertions.assertThat(agent.getPeerConnection(peer).get().get()).isEqualTo(incomingConnection);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertThat(existingConnection.get().isDisconnected()).isTrue();
-    assertThat(((MockPeerConnection) existingConnection.get()).getDisconnectReason())
-        .contains(DisconnectReason.ALREADY_CONNECTED);
-  }
-
-  @Test
-  public void connect_failsWhenMaxPeersConnected() {
-    // Saturate connections
-    startAgentWithLowerBoundPeers(1);
-    agent.connect(createPeer());
-
-    final Peer peer = createPeer();
-    final CompletableFuture<PeerConnection> connection = agent.connect(peer);
-
-    assertThat(connection).isDone();
-    assertThat(connection).isCompletedExceptionally();
-
-    assertThatThrownBy(connection::get)
-        .hasCauseInstanceOf(IllegalStateException.class)
-        .hasMessageContaining("Max peer connections established (1). Cannot connect to peer");
-    assertPeerConnectionNotTracked(peer);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-  }
-
-  @Test
-  public void incomingConnection_maxPeersExceeded()
-      throws ExecutionException, InterruptedException {
-    // Saturate connections
-    startAgentWithLowerBoundPeers(1);
-    final Peer existingPeer = createPeer();
-    final PeerConnection existingConnection = agent.connect(existingPeer).get();
-    // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-
-    // Simulate incoming connection
-    final Peer newPeer = createPeer();
-    final MockPeerConnection incomingConnection = connection(newPeer);
-    connectionInitializer.simulateIncomingConnection(incomingConnection);
-
-    // Incoming or existing connection should be disconnected
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    if (agent.getPeerConnection(newPeer).isPresent()) {
-      assertThat(((MockPeerConnection) existingConnection).getDisconnectReason())
-          .contains(DisconnectReason.TOO_MANY_PEERS);
-    } else {
-      assertThat(incomingConnection.getDisconnectReason())
-          .contains(DisconnectReason.TOO_MANY_PEERS);
-    }
-  }
-
-  @Test
-  public void incomingConnection_succeedsEventuallyWithRandomPeerPrioritization() {
-    // Saturate connections with one local and one remote
-    final int maxPeers = 25;
-    startAgentWithLowerBoundPeers(
-        maxPeers,
-        maxPeers,
-        builder -> builder.randomPeerPriority(true),
-        rlpxConfiguration -> rlpxConfiguration.setLimitRemoteWireConnectionsEnabled(false));
-    agent.connect(createPeer());
-    for (int i = 0; i < 24; i++) {
-      connectionInitializer.simulateIncomingConnection(connection(createPeer()));
-    }
-    // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(maxPeers);
-
-    boolean newConnectionDisconnected = false;
-    boolean oldConnectionDisconnected = false;
-    // With very high probability we should see the connections churn
-    for (int i = 0; i < 1000 && !(newConnectionDisconnected && oldConnectionDisconnected); ++i) {
-      final List<PeerConnection> connectionsBefore =
-          agent.streamConnections().collect(Collectors.toUnmodifiableList());
-
-      // Simulate incoming connection
-      final Peer newPeer = createPeer();
-      final MockPeerConnection incomingConnection = connection(newPeer);
-      connectionInitializer.simulateIncomingConnection(incomingConnection);
-
-      final List<PeerConnection> connectionsAfter =
-          agent.streamConnections().collect(Collectors.toUnmodifiableList());
-
-      if (connectionsBefore.equals(connectionsAfter)) {
-        newConnectionDisconnected = true;
-      } else if (!connectionsBefore.equals(connectionsAfter)) {
-        oldConnectionDisconnected = true;
-      }
-
-      assertThat(agent.getConnectionCount()).isEqualTo(maxPeers);
-    }
-    assertThat(newConnectionDisconnected).isTrue();
-    assertThat(oldConnectionDisconnected).isTrue();
-  }
-
-  @Test
-  public void incomingConnection_afterMaxRemotelyInitiatedConnectionsHaveBeenEstablished() {
-    final int maxPeers = 10;
-    final int maxRemotePeers = 8;
-    final float maxRemotePeersFraction = (float) maxRemotePeers / (float) maxPeers;
-    config.setLimitRemoteWireConnectionsEnabled(true);
-    config.setFractionRemoteWireConnectionsAllowed(maxRemotePeersFraction);
-    startAgentWithLowerBoundPeers(maxPeers);
-
-    // Connect max remote peers
-    for (int i = 0; i < maxRemotePeers; i++) {
-      final Peer remotelyInitiatedPeer = createPeer();
-      final MockPeerConnection incomingConnection = connection(remotelyInitiatedPeer);
-      connectionInitializer.simulateIncomingConnection(incomingConnection);
-      assertThat(incomingConnection.getDisconnectReason()).isEmpty();
-    }
-
-    // Next remote connection should be rejected
-    final Peer remotelyInitiatedPeer = createPeer();
-    final MockPeerConnection incomingConnection = connection(remotelyInitiatedPeer);
-    connectionInitializer.simulateIncomingConnection(incomingConnection);
-    assertThat(incomingConnection.getDisconnectReason()).contains(DisconnectReason.TOO_MANY_PEERS);
-  }
-
-  @Test
-  public void connect_afterMaxRemotelyInitiatedConnectionsHaveBeenEstablished() {
-    final int maxPeers = 10;
-    final int maxRemotePeers = 8;
-    final float maxRemotePeersFraction = (float) maxRemotePeers / (float) maxPeers;
-    config.setLimitRemoteWireConnectionsEnabled(true);
-    config.setFractionRemoteWireConnectionsAllowed(maxRemotePeersFraction);
-    startAgentWithLowerBoundPeers(maxPeers);
-
-    // Connect max remote peers
-    for (int i = 0; i < maxRemotePeers; i++) {
-      final Peer remotelyInitiatedPeer = createPeer();
-      final MockPeerConnection incomingConnection = connection(remotelyInitiatedPeer);
-      connectionInitializer.simulateIncomingConnection(incomingConnection);
-      assertThat(incomingConnection.getDisconnectReason()).isEmpty();
-    }
-
-    // Subsequent local connection should be permitted up to maxPeers
-    for (int i = 0; i < (maxPeers - maxRemotePeers); i++) {
-      final Peer peer = createPeer();
-      final CompletableFuture<PeerConnection> connection = agent.connect(peer);
-      assertThat(connection).isDone();
-      assertThat(connection).isNotCompletedExceptionally();
-      assertThat(agent.getPeerConnection(peer)).contains(connection);
-    }
-  }
-
-  @Test
-  public void incomingConnection_withMaxRemotelyInitiatedConnectionsAt100Percent() {
-    final int maxPeers = 10;
-    final float maxRemotePeersFraction = 1.0f;
-    config.setLimitRemoteWireConnectionsEnabled(true);
-    config.setFractionRemoteWireConnectionsAllowed(maxRemotePeersFraction);
-    startAgentWithLowerBoundPeers(maxPeers);
-
-    // Connect max remote peers
-    for (int i = 0; i < maxPeers; i++) {
-      final Peer remotelyInitiatedPeer = createPeer();
-      final MockPeerConnection incomingConnection = connection(remotelyInitiatedPeer);
-      connectionInitializer.simulateIncomingConnection(incomingConnection);
-      assertThat(incomingConnection.getDisconnectReason()).isEmpty();
-    }
-  }
-
-  @Test
-  public void connect_withMaxRemotelyInitiatedConnectionsAt100Percent() {
-    final int maxPeers = 10;
-    final float maxRemotePeersFraction = 1.0f;
-    config.setLimitRemoteWireConnectionsEnabled(true);
-    config.setFractionRemoteWireConnectionsAllowed(maxRemotePeersFraction);
-    startAgentWithLowerBoundPeers(maxPeers);
-
-    // Connect max peers locally
-    for (int i = 0; i < maxPeers; i++) {
-      final Peer peer = createPeer();
-      final CompletableFuture<PeerConnection> connection = agent.connect(peer);
-      assertThat(connection).isDone();
-      assertThat(connection).isNotCompletedExceptionally();
-      assertThat(agent.getPeerConnection(peer)).contains(connection);
-    }
-  }
-
-  @Test
-  public void incomingConnection_withMaxRemotelyInitiatedConnectionsAtZeroPercent() {
-    final int maxPeers = 10;
-    final float maxRemotePeersFraction = 0.0f;
-    config.setLimitRemoteWireConnectionsEnabled(true);
-    config.setFractionRemoteWireConnectionsAllowed(maxRemotePeersFraction);
-    startAgentWithLowerBoundPeers(maxPeers);
-
-    // First remote connection should be rejected
-    final Peer remotelyInitiatedPeer = createPeer();
-    final MockPeerConnection incomingConnection = connection(remotelyInitiatedPeer);
-    connectionInitializer.simulateIncomingConnection(incomingConnection);
-    assertThat(incomingConnection.getDisconnectReason()).contains(DisconnectReason.TOO_MANY_PEERS);
-  }
-
-  @Test
-  public void connect_withMaxRemotelyInitiatedConnectionsAtZeroPercent() {
-    final int maxPeers = 10;
-    final float maxRemotePeersFraction = 0.0f;
-    config.setLimitRemoteWireConnectionsEnabled(true);
-    config.setFractionRemoteWireConnectionsAllowed(maxRemotePeersFraction);
-    startAgentWithLowerBoundPeers(maxPeers);
-
-    // Connect max local peers
-    for (int i = 0; i < maxPeers; i++) {
-      final Peer peer = createPeer();
-      final CompletableFuture<PeerConnection> connection = agent.connect(peer);
-      assertThat(connection).isDone();
-      assertThat(connection).isNotCompletedExceptionally();
-      assertThat(agent.getPeerConnection(peer)).contains(connection);
-    }
-  }
-
-  @Test
-  public void incomingConnection_succeedsForPrivilegedPeerWhenMaxRemoteConnectionsExceeded() {
-    final int maxPeers = 5;
-    final int maxRemotePeers = 3;
-    final float maxRemotePeersFraction = (float) maxRemotePeers / (float) maxPeers;
-    config.setLimitRemoteWireConnectionsEnabled(true);
-    config.setFractionRemoteWireConnectionsAllowed(maxRemotePeersFraction);
-    startAgentWithLowerBoundPeers(maxPeers);
-
-    // Connect max remote peers
-    for (int i = 0; i < maxRemotePeers; i++) {
-      final Peer remotelyInitiatedPeer = createPeer();
-      final MockPeerConnection incomingConnection = connection(remotelyInitiatedPeer);
-      connectionInitializer.simulateIncomingConnection(incomingConnection);
-      assertThat(incomingConnection.getDisconnectReason()).isEmpty();
-    }
-    // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(maxRemotePeers);
-
-    final Peer privilegedPeer = createPeer();
-    when(peerPrivileges.canExceedConnectionLimits(privilegedPeer)).thenReturn(true);
-    final MockPeerConnection privilegedConnection = connection(privilegedPeer);
-    connectionInitializer.simulateIncomingConnection(privilegedConnection);
-    assertThat(privilegedConnection.isDisconnected()).isFalse();
-
-    // No peers should be disconnected - exempt connections are ignored when enforcing this limit
-    assertThat(agent.getConnectionCount()).isEqualTo(maxRemotePeers + 1);
-
-    // The next non-exempt connection should fail
-    final Peer remotelyInitiatedPeer = createPeer();
-    final MockPeerConnection incomingConnection = connection(remotelyInitiatedPeer);
-    connectionInitializer.simulateIncomingConnection(incomingConnection);
-    assertThat(agent.getConnectionCount()).isEqualTo(maxRemotePeers + 1);
-    assertThat(incomingConnection.getDisconnectReason()).contains(DisconnectReason.TOO_MANY_PEERS);
-  }
-
-  @Test
-  public void connect_succeedsForExemptPeerWhenMaxPeersConnected()
-      throws ExecutionException, InterruptedException {
-    // Turn off autocomplete so that each connection is established (completed) after it has been
-    // successfully added to the internal connections set. This mimics async production behavior.
-    connectionInitializer.setAutocompleteConnections(false);
-
-    // Saturate connections
-    startAgentWithLowerBoundPeers(1);
-    final CompletableFuture<PeerConnection> existingConnectionFuture = agent.connect(createPeer());
-    connectionInitializer.completePendingFutures();
-    final MockPeerConnection existingConnection =
-        (MockPeerConnection) existingConnectionFuture.get();
-
-    final Peer peer = createPeer();
-    when(peerPrivileges.canExceedConnectionLimits(peer)).thenReturn(true);
-    final CompletableFuture<PeerConnection> connection = agent.connect(peer);
-    connectionInitializer.completePendingFutures();
-
-    assertThat(connection).isDone();
-    assertThat(connection).isNotCompletedExceptionally();
-
-    assertThat(agent.getPeerConnection(peer)).contains(connection);
-    // Previous, non-exempt connection should be disconnected
-    assertThat(existingConnection.isDisconnected()).isTrue();
-    assertThat(existingConnection.getDisconnectReason()).contains(DisconnectReason.TOO_MANY_PEERS);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-  }
-
-  @Test
-  public void connect_succeedsForExemptPeerWhenMaxExemptPeersConnected() {
-    // Turn off autocomplete so that each connection is established (completed) after it has been
-    // successfully added to the internal connections set. This mimics async production behavior.
-    connectionInitializer.setAutocompleteConnections(false);
-
-    startAgentWithLowerBoundPeers(1);
-    final Peer peerA = createPeer();
-    final Peer peerB = createPeer();
-    when(peerPrivileges.canExceedConnectionLimits(peerA)).thenReturn(true);
-    when(peerPrivileges.canExceedConnectionLimits(peerB)).thenReturn(true);
-
-    // Saturate connections
-    final CompletableFuture<PeerConnection> existingConnection = agent.connect(peerA);
-    connectionInitializer.completePendingFutures();
-
-    // Create new connection
-    final CompletableFuture<PeerConnection> connection = agent.connect(peerB);
-    connectionInitializer.completePendingFutures();
-
-    assertThat(connection).isDone();
-    assertThat(connection).isNotCompletedExceptionally();
-
-    // Both connections should be kept since they are both exempt from max peer limits
-    assertThat(agent.getPeerConnection(peerA)).contains(existingConnection);
-    assertThat(agent.getPeerConnection(peerB)).contains(connection);
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
-  }
-
-  @Test
-  public void incomingConnection_maxPeersExceeded_incomingConnectionExemptFromLimits()
-      throws ExecutionException, InterruptedException {
-    final Peer peerA = createPeer();
-    final Peer peerB = createPeer();
-    when(peerPrivileges.canExceedConnectionLimits(peerB)).thenReturn(true);
-
-    // Saturate connections
-    startAgentWithLowerBoundPeers(1);
-
-    // Add existing peer
-    final MockPeerConnection existingConnection = (MockPeerConnection) agent.connect(peerA).get();
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-
-    // Simulate incoming connection
-    final MockPeerConnection connection = connection(peerB);
-    connectionInitializer.simulateIncomingConnection(connection);
-
-    // Existing connection should be disconnected
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertPeerConnectionNotTracked(peerA);
-    assertThat(agent.getPeerConnection(peerB)).isNotEmpty();
-    assertThat(existingConnection.isDisconnected()).isTrue();
-    assertThat(existingConnection.getDisconnectReason()).contains(DisconnectReason.TOO_MANY_PEERS);
-    assertThat(connection.isDisconnected()).isFalse();
-  }
-
-  @Test
-  public void incomingConnection_maxPeersExceeded_existingConnectionExemptFromLimits()
-      throws ExecutionException, InterruptedException {
-    final Peer peerA = createPeer();
-    final Peer peerB = createPeer();
-    when(peerPrivileges.canExceedConnectionLimits(peerA)).thenReturn(true);
-
-    // Saturate connections
-    startAgentWithLowerBoundPeers(1);
-
-    // Add existing peer
-    final PeerConnection existingConnection = agent.connect(peerA).get();
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-
-    // Simulate incoming connection
-    final MockPeerConnection connection = connection(peerB);
-    connectionInitializer.simulateIncomingConnection(connection);
-
-    // Incoming connection should be disconnected
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertPeerConnectionNotTracked(peerB);
-    assertThat(agent.getPeerConnection(peerA)).isNotEmpty();
-    assertThat(connection.isDisconnected()).isTrue();
-    assertThat(connection.getDisconnectReason()).contains(DisconnectReason.TOO_MANY_PEERS);
-    assertThat(existingConnection.isDisconnected()).isFalse();
-  }
-
-  @Test
-  public void incomingConnection_maxPeersExceeded_allConnectionsExemptFromLimits()
-      throws ExecutionException, InterruptedException {
-    final Peer peerA = createPeer();
-    final Peer peerB = createPeer();
-    when(peerPrivileges.canExceedConnectionLimits(peerA)).thenReturn(true);
-    when(peerPrivileges.canExceedConnectionLimits(peerB)).thenReturn(true);
-
-    // Saturate connections
-    startAgentWithLowerBoundPeers(1);
-
-    // Add existing peer
-    final CompletableFuture<PeerConnection> existingConnection = agent.connect(peerA);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-
-    // Simulate incoming connection
-    final PeerConnection connection = connection(peerB);
-    connectionInitializer.simulateIncomingConnection(connection);
-
-    // Neither peer should be disconnected
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
-    assertThat(agent.getPeerConnection(peerB)).isNotEmpty();
-    assertThat(agent.getPeerConnection(peerA)).isNotEmpty();
-    assertThat(connection.isDisconnected()).isFalse();
-    assertThat(existingConnection.get().isDisconnected()).isFalse();
   }
 
   @Test
   public void connect_failsIfPeerIsNotPermitted() {
     startAgent();
+
     final Peer peer = createPeer();
     doReturn(false)
         .when(peerPermissions)
@@ -678,14 +266,15 @@ public class RlpxAgentTest {
     assertThat(connection).isCompletedExceptionally();
 
     assertThatThrownBy(connection::get).hasCauseInstanceOf(PeerPermissionsException.class);
-    assertPeerConnectionNotTracked(peer);
+    assertThat(agent.getMapOfCompletableFutures().keySet().contains(peer)).isFalse();
   }
 
   @Test
   public void incomingConnection_disconnectedIfPeerIsNotPermitted() {
     startAgent();
+
     final Peer peer = createPeer();
-    final MockPeerConnection connection = connection(peer);
+    final MockPeerConnection connection = connection(peer, true);
     doReturn(false)
         .when(peerPermissions)
         .isPermitted(
@@ -694,101 +283,45 @@ public class RlpxAgentTest {
             eq(PeerPermissions.Action.RLPX_ALLOW_NEW_INBOUND_CONNECTION));
     connectionInitializer.simulateIncomingConnection(connection);
 
-    assertPeerConnectionNotTracked(peer);
+    assertThat(agent.getMapOfCompletableFutures().keySet().contains(peer)).isFalse();
     assertThat(connection.getDisconnectReason()).contains(DisconnectReason.UNKNOWN);
   }
 
   @Test
   public void connect_largeStreamOfPeers() {
-    final int maxPeers = 5;
-    final Stream<Peer> peerStream = Stream.generate(PeerTestHelper::createPeer).limit(20);
+    startAgent();
 
-    startAgentWithLowerBoundPeers(maxPeers);
+    final int peerNo = 20;
+    final Stream<? extends Peer> peerStream =
+        Stream.generate(PeerTestHelper::createPeer).limit(peerNo);
+
     agent = spy(agent);
     agent.connect(peerStream);
 
-    assertThat(agent.getConnectionCount()).isEqualTo(maxPeers);
-    // Check that stream was not fully iterated
-    verify(agent, times(maxPeers)).connect(any(Peer.class));
-  }
-
-  @Test
-  public void connect_largeStreamOfPeersWithMinAndMaxPeers() {
-    final int minPeers = 5;
-    final Stream<Peer> peerStream = Stream.generate(PeerTestHelper::createPeer).limit(20);
-
-    startAgentWithLowerBoundPeers(minPeers, minPeers + 5);
-    agent = spy(agent);
-    agent.connect(peerStream);
-
-    assertThat(agent.getConnectionCount()).isEqualTo(minPeers);
-    // Check that stream was not fully iterated
-    verify(agent, times(minPeers)).connect(any(Peer.class));
-  }
-
-  @Test
-  public void connect_largeStreamOfPeersFirstFewImpostors() {
-    final int maxPeers = 5;
-    final int impostorsCount = 5;
-    connectionInitializer.setAutoDisconnectCounter(impostorsCount);
-    final Stream<Peer> peerStream = Stream.generate(PeerTestHelper::createPeer).limit(20);
-
-    startAgentWithLowerBoundPeers(maxPeers);
-    agent = spy(agent);
-    agent.connect(peerStream);
-
-    assertThat(agent.getConnectionCount()).isEqualTo(maxPeers);
-    // Check that stream was not fully iterated
-    verify(agent, times(maxPeers + impostorsCount)).connect(any(Peer.class));
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(peerNo);
+    verify(agent, times(peerNo)).connect(any(Peer.class));
   }
 
   @Test
   public void disconnect() throws ExecutionException, InterruptedException {
     startAgent();
+
     final Peer peer = spy(createPeer());
     final CompletableFuture<PeerConnection> future = agent.connect(peer);
-    final MockPeerConnection connection = (MockPeerConnection) future.get();
 
     // Sanity check connection was established
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertThat(agent.getPeerConnection(peer)).isNotEmpty();
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(1);
+    assertThat(agent.getMapOfCompletableFutures().keySet()).contains(peer.getId());
 
     // Disconnect
     final DisconnectReason reason = DisconnectReason.REQUESTED;
     agent.disconnect(peer.getId(), reason);
 
     // Validate peer was disconnected
-    assertThat(agent.getConnectionCount()).isEqualTo(0);
-    assertThat(connection.isDisconnected()).isTrue();
-    assertThat(connection.getDisconnectReason()).contains(reason);
-    assertPeerConnectionNotTracked(peer);
-
-    // Additional requests to disconnect should do nothing
-    agent.disconnect(peer.getId(), reason);
-    agent.disconnect(peer.getId(), reason);
-    assertThat(agent.getConnectionCount()).isEqualTo(0);
-  }
-
-  @Test
-  public void getConnectionCount() throws ExecutionException, InterruptedException {
-    startAgent();
-    final Peer peerA = createPeer();
-    final Peer peerB = createPeer();
-    final Peer peerC = createPeer();
-
-    assertThat(agent.getConnectionCount()).isEqualTo(0);
-    agent.connect(peerA);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    agent.connect(peerA);
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    agent.connect(peerB);
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
-    agent.connect(peerC);
-    assertThat(agent.getConnectionCount()).isEqualTo(3);
-
-    // Disconnect should decrement count
-    agent.disconnect(peerB.getId(), DisconnectReason.UNKNOWN);
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
+    final PeerConnection actual = agent.getMapOfCompletableFutures().get(peer.getId()).get();
+    assertThat(actual).isEqualTo(future.get());
+    assertThat(actual.isDisconnected()).isTrue();
+    assertThat(((MockPeerConnection) actual).getDisconnectReason()).contains(reason);
   }
 
   @Test
@@ -797,11 +330,16 @@ public class RlpxAgentTest {
     final Peer permittedPeer = createPeer();
     final Peer nonPermittedPeer = createPeer();
     startAgent();
-    final PeerConnection permittedConnection = agent.connect(permittedPeer).get();
-    final PeerConnection nonPermittedConnection = agent.connect(nonPermittedPeer).get();
+
+    final CompletableFuture<PeerConnection> permittedConnectionFuture =
+        this.agent.connect(permittedPeer);
+    final PeerConnection permittedConnection = permittedConnectionFuture.get();
+    final PeerConnection nonPermittedConnection = spy(this.agent.connect(nonPermittedPeer).get());
+
+    connections = List.of(permittedConnection, nonPermittedConnection);
 
     // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(2);
 
     doReturn(false)
         .when(peerPermissions)
@@ -811,9 +349,8 @@ public class RlpxAgentTest {
             eq(PeerPermissions.Action.RLPX_ALLOW_ONGOING_LOCALLY_INITIATED_CONNECTION));
     peerPermissions.testDispatchUpdate(true, Optional.empty());
 
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertThat(agent.getPeerConnection(permittedPeer)).isNotEmpty();
-    assertPeerConnectionNotTracked(nonPermittedPeer);
+    verify(nonPermittedConnection, times(1)).disconnect(any());
+    assertThat(agent.getMapOfCompletableFutures().values()).contains(permittedConnectionFuture);
     assertThat(permittedConnection.isDisconnected()).isFalse();
     assertThat(nonPermittedConnection.isDisconnected()).isTrue();
   }
@@ -824,11 +361,14 @@ public class RlpxAgentTest {
     final Peer permittedPeer = createPeer();
     final Peer nonPermittedPeer = createPeer();
     startAgent();
+
     final PeerConnection permittedConnection = agent.connect(permittedPeer).get();
     final PeerConnection nonPermittedConnection = agent.connect(nonPermittedPeer).get();
 
+    connections = List.of(permittedConnection, nonPermittedConnection);
+
     // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(2);
 
     doReturn(false)
         .when(peerPermissions)
@@ -836,11 +376,9 @@ public class RlpxAgentTest {
             eq(localNode.getPeer()),
             eq(nonPermittedPeer),
             eq(PeerPermissions.Action.RLPX_ALLOW_ONGOING_LOCALLY_INITIATED_CONNECTION));
-    peerPermissions.testDispatchUpdate(true, Optional.of(Arrays.asList(nonPermittedPeer)));
+    peerPermissions.testDispatchUpdate(true, Optional.of(List.of(nonPermittedPeer)));
 
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertThat(agent.getPeerConnection(permittedPeer)).isNotEmpty();
-    assertPeerConnectionNotTracked(nonPermittedPeer);
+    assertThat(agent.getMapOfCompletableFutures().get(permittedPeer.getId())).isNotNull();
     assertThat(permittedConnection.isDisconnected()).isFalse();
     assertThat(nonPermittedConnection.isDisconnected()).isTrue();
   }
@@ -851,24 +389,28 @@ public class RlpxAgentTest {
     final Peer locallyConnectedPeer = createPeer();
     final Peer remotelyConnectedPeer = createPeer();
     startAgent();
+
+    final ConnectionDispatch connectionDispatch = new ConnectionDispatch();
+    agent.subscribeConnect(connectionDispatch::onConnect);
+
     final PeerConnection locallyInitiatedConnection = agent.connect(locallyConnectedPeer).get();
-    final PeerConnection remotelyInitiatedConnection = connection(remotelyConnectedPeer);
+    final PeerConnection remotelyInitiatedConnection = connection(remotelyConnectedPeer, true);
+    connections = List.of(locallyInitiatedConnection, remotelyInitiatedConnection);
     connectionInitializer.simulateIncomingConnection(remotelyInitiatedConnection);
 
     // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(1); // outgoing connection
+    assertThat(connectionDispatch.getDispatchCount())
+        .isEqualTo(2); // incoming and outgoing connection
 
     doReturn(false)
         .when(peerPermissions)
         .isPermitted(
             eq(localNode.getPeer()),
-            any(),
+            eq(remotelyConnectedPeer),
             eq(PeerPermissions.Action.RLPX_ALLOW_ONGOING_REMOTELY_INITIATED_CONNECTION));
     peerPermissions.testDispatchUpdate(true, Optional.empty());
 
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertThat(agent.getPeerConnection(locallyConnectedPeer)).isNotEmpty();
-    assertPeerConnectionNotTracked(remotelyConnectedPeer);
     assertThat(locallyInitiatedConnection.isDisconnected()).isFalse();
     assertThat(remotelyInitiatedConnection.isDisconnected()).isTrue();
   }
@@ -879,24 +421,28 @@ public class RlpxAgentTest {
     final Peer locallyConnectedPeer = createPeer();
     final Peer remotelyConnectedPeer = createPeer();
     startAgent();
+
+    final ConnectionDispatch connectionDispatch = new ConnectionDispatch();
+    agent.subscribeConnect(connectionDispatch::onConnect);
+
     final PeerConnection locallyInitiatedConnection = agent.connect(locallyConnectedPeer).get();
-    final PeerConnection remotelyInitiatedConnection = connection(remotelyConnectedPeer);
+    final PeerConnection remotelyInitiatedConnection = connection(remotelyConnectedPeer, true);
+    connections = List.of(locallyInitiatedConnection, remotelyInitiatedConnection);
     connectionInitializer.simulateIncomingConnection(remotelyInitiatedConnection);
 
     // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(1); // outgoing connection
+    assertThat(connectionDispatch.getDispatchCount())
+        .isEqualTo(2); // incoming and outgoing connection
 
     doReturn(false)
         .when(peerPermissions)
         .isPermitted(
             eq(localNode.getPeer()),
-            any(),
+            eq(locallyConnectedPeer),
             eq(PeerPermissions.Action.RLPX_ALLOW_ONGOING_LOCALLY_INITIATED_CONNECTION));
     peerPermissions.testDispatchUpdate(true, Optional.empty());
 
-    assertThat(agent.getConnectionCount()).isEqualTo(1);
-    assertPeerConnectionNotTracked(locallyConnectedPeer);
-    assertThat(agent.getPeerConnection(remotelyConnectedPeer)).isNotEmpty();
     assertThat(locallyInitiatedConnection.isDisconnected()).isTrue();
     assertThat(remotelyInitiatedConnection.isDisconnected()).isFalse();
   }
@@ -907,17 +453,16 @@ public class RlpxAgentTest {
     final Peer peerA = createPeer();
     final Peer peerB = createPeer();
     startAgent();
+
     final PeerConnection connectionA = agent.connect(peerA).get();
     final PeerConnection connectionB = agent.connect(peerB).get();
 
     // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(2); // outgoing connections
 
+    doReturn(false).when(peerPermissions).isPermitted(any(), any(), any());
     peerPermissions.testDispatchUpdate(false, Optional.empty());
 
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
-    assertThat(agent.getPeerConnection(peerA)).isNotEmpty();
-    assertThat(agent.getPeerConnection(peerB)).isNotEmpty();
     assertThat(connectionA.isDisconnected()).isFalse();
     assertThat(connectionB.isDisconnected()).isFalse();
   }
@@ -928,17 +473,16 @@ public class RlpxAgentTest {
     final Peer peerA = createPeer();
     final Peer peerB = createPeer();
     startAgent();
+
     final PeerConnection connectionA = agent.connect(peerA).get();
     final PeerConnection connectionB = agent.connect(peerB).get();
 
     // Sanity check
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
+    assertThat(agent.getMapOfCompletableFutures().size()).isEqualTo(2); // outgoing connections
 
-    peerPermissions.testDispatchUpdate(false, Optional.of(Arrays.asList(peerA)));
+    doReturn(false).when(peerPermissions).isPermitted(any(), any(), any());
+    peerPermissions.testDispatchUpdate(false, Optional.of(List.of(peerA)));
 
-    assertThat(agent.getConnectionCount()).isEqualTo(2);
-    assertThat(agent.getPeerConnection(peerA)).isNotEmpty();
-    assertThat(agent.getPeerConnection(peerB)).isNotEmpty();
     assertThat(connectionA.isDisconnected()).isFalse();
     assertThat(connectionB.isDisconnected()).isFalse();
   }
@@ -954,7 +498,7 @@ public class RlpxAgentTest {
     agent.connect(peer);
 
     assertThat(connection.get()).isNotNull();
-    Assertions.assertThat(connection.get().getPeer()).isEqualTo(peer);
+    assertThat(connection.get().getPeer()).isEqualTo(peer);
   }
 
   @Test
@@ -965,10 +509,10 @@ public class RlpxAgentTest {
     final AtomicReference<PeerConnection> connection = new AtomicReference<>();
     agent.subscribeConnect(connection::set);
 
-    connectionInitializer.simulateIncomingConnection(connection(peer));
+    connectionInitializer.simulateIncomingConnection(connection(peer, true));
 
     assertThat(connection.get()).isNotNull();
-    Assertions.assertThat(connection.get().getPeer()).isEqualTo(peer);
+    assertThat(connection.get().getPeer()).isEqualTo(peer);
   }
 
   @Test
@@ -983,7 +527,7 @@ public class RlpxAgentTest {
     agent.disconnect(peer.getId(), DisconnectReason.REQUESTED);
 
     assertThat(connection.get()).isNotNull();
-    Assertions.assertThat(connection.get().getPeer()).isEqualTo(peer);
+    assertThat(connection.get().getPeer()).isEqualTo(peer);
   }
 
   @Test
@@ -1012,7 +556,7 @@ public class RlpxAgentTest {
     final CompletableFuture<PeerConnection> future = agent.connect(peer);
     assertThat(future).isNotDone();
 
-    assertThat(agent.getPeerConnection(peer)).contains(future);
+    assertThat(agent.getMapOfCompletableFutures().values()).contains(future);
   }
 
   @Test
@@ -1023,35 +567,11 @@ public class RlpxAgentTest {
     final CompletableFuture<PeerConnection> future = agent.connect(peer);
     assertThat(future).isDone();
 
-    assertThat(agent.getPeerConnection(peer)).contains(future);
-  }
-
-  private void assertPeerConnectionNotTracked(final Peer peer) {
-    assertThat(agent.getPeerConnection(peer)).isEmpty();
-    Assertions.assertThat(agent.connectionsById.get(peer.getId())).isNull();
+    assertThat(agent.getMapOfCompletableFutures().values()).contains(future);
   }
 
   private void startAgent() {
     startAgent(Peer.randomId());
-  }
-
-  private void startAgentWithLowerBoundPeers(final int lowerBound, final int upperBound) {
-    startAgentWithLowerBoundPeers(lowerBound, upperBound, Function.identity(), __ -> {});
-  }
-
-  private void startAgentWithLowerBoundPeers(final int lowerBound) {
-    startAgentWithLowerBoundPeers(lowerBound, lowerBound, Function.identity(), __ -> {});
-  }
-
-  private void startAgentWithLowerBoundPeers(
-      final int lowerBound,
-      final int upperBound,
-      final Function<RlpxAgent.Builder, RlpxAgent.Builder> buildCustomization,
-      final Consumer<RlpxConfiguration> rlpxConfigurationModifier) {
-    config.setPeerLowerBound(lowerBound);
-    config.setPeerUpperBound(upperBound);
-    agent = agent(buildCustomization, rlpxConfigurationModifier);
-    startAgent();
   }
 
   private void startAgent(final Bytes nodeId) {
@@ -1066,7 +586,6 @@ public class RlpxAgentTest {
   private RlpxAgent agent(
       final Function<RlpxAgent.Builder, RlpxAgent.Builder> buildCustomization,
       final Consumer<RlpxConfiguration> rlpxConfigurationModifier) {
-    config.setLimitRemoteWireConnectionsEnabled(true);
     rlpxConfigurationModifier.accept(config);
     return buildCustomization
         .apply(
@@ -1078,12 +597,14 @@ public class RlpxAgentTest {
                 .localNode(localNode)
                 .metricsSystem(metrics)
                 .connectionInitializer(connectionInitializer)
-                .connectionEvents(peerConnectionEvents))
+                .connectionEvents(peerConnectionEvents)
+                .allConnectionsSupplier(allConnectionsSupplier)
+                .allActiveConnectionsSupplier(allActiveConnectionsSupplier))
         .build();
   }
 
-  private MockPeerConnection connection(final Peer peer) {
-    return MockPeerConnection.create(peer, peerConnectionEvents);
+  private MockPeerConnection connection(final Peer peer, final boolean inboundInitiated) {
+    return MockPeerConnection.create(peer, peerConnectionEvents, inboundInitiated);
   }
 
   private static class TestPeerPermissions extends PeerPermissions {
@@ -1097,5 +618,21 @@ public class RlpxAgentTest {
         final boolean permissionsRestricted, final Optional<List<Peer>> affectedPeers) {
       this.dispatchUpdate(permissionsRestricted, affectedPeers);
     }
+  }
+
+  private static class ConnectionDispatch {
+    private int dispatchCount;
+
+    public void onConnect(final PeerConnection pc) {
+      this.dispatchCount++;
+    }
+
+    public int getDispatchCount() {
+      return dispatchCount;
+    }
+  }
+
+  private Stream<PeerConnection> streamConnections() {
+    return connections.stream();
   }
 }
